--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,7 @@
 <div class="loading">
 	<div class="loading-circle"></div>
 	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
-	<div class="loading-info">合照来了 谁是最靓的仔！</div>
+	<div class="loading-info">___奋力加载中___</div>
 </div>
 <div class="section-header">
 	<div class="section">
@@ -34,24 +34,24 @@
 	<div class="nav-bg"></div>
 </div>
 <div class="home-bg">
-	<img src="images/home-2.jpg" alt="" width="800" height="667">
+	<img src="images/home.jpg" alt="" width="800" height="667">
 </div>
 <div class="section-wrap section-fristpage">
 	<div class="section">
 		<div class="section-content">
-			<p class="fade fade1">感谢老师陪伴我们一学期</p>
-			<p class="fade fade2">你的样子我们会永远记在心中！</p>
+			<p class="fade fade1">一学期,转瞬即逝</p>
+			<p class="fade fade2">你的样貌将会永远记在我们心中！</p>
 			<p class="fade fade3">滴水之恩,涌泉相报</p>
 			<p class="fade fade4">You di da di da me,I hua la hua la you.</p>
 		</div>
-		<a href="#" class="scroll-tip fade fade4">向下滚动</a>
 	</div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="about-content clearfix section-content">
 	<img src="images/Group photo.jpg" alt="" width="980" height="580">
-	</div>
+	    </div>
+    </div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
@@ -63,30 +63,21 @@
 	<div class="section">
 		<div class="skill-content section-content">
 	<img src="images/Group photo-3.jpg" alt="" width="980" height="580">
-	</div>
+	    </div>
+    </div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="skill-content section-content">
-    <img src="images/Selfie-1.jpg" alt="" width="150" height="180">
-	<img src="images/Selfie-2.jpg" alt="" width="150" height="180">
-	<img src="images/Selfie-3.jpg" alt="" width="150" height="180">
-	<img src="images/Selfie-4.jpg" alt="" width="150" height="180">
-	<img src="images/Selfie-5.jpg" alt="" width="150" height="180">
-	<img src="images/Selfie-6.jpg" alt="" width="150" height="180">
-	<img src="images/Selfie-7.jpg" alt="" width="450" height="180">
-	<img src="images/Selfie-8.jpg" alt="" width="466" height="180">
-	<img src="images/Selfie-9.jpg" alt="" width="90" height="100">
+	<img src="images/Selfie-1.jpg" alt="" width="315" height="550">
+	<img src="images/Selfie-2.jpg" alt="" width="315" height="550">
+	<img src="images/Selfie-3.jpg" alt="" width="315" height="550">
+	    </div>
 	</div>
 </div>
-<div class="overlay"></div>
-<div class="state-indicator"></div>
 
 <script type="text/javascript" src="./js/jquery-1.9.1.min.js"></script>
 <script src="js/global.js"></script>
 
 </body>
 </html>
-<SCRIPT Language=VBScript><!--
-
-//--></SCRIPT>
