--- a/zp.html
+++ b/zp.html
@@ -57,7 +57,7 @@
 	3:对CraftBukkit/Spigot有较深的理解<br>
 	4:拥有效率和热情<br>
 	PS:拥有mcbbs原创插件发布者优先考虑<br>
-      <a class="am-btn am-btn-success am-btn-sm"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>	
+      <a class="am-btn am-btn-success am-btn-sm" href="tencent://message/?Menu=yes&uin=3328429240"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>	
 	
 <hr>
     <div class="am-text-secondary"><h3>服务器运维[全职/兼职]</h3></div>
@@ -65,7 +65,7 @@
     2:精通linux.windows服务器运行/维护/优化<br>
     3:可对服务器性能与安全进行适当强化<br>
 	4:拥有效率和热情<br>
-  <a class="am-btn am-btn-success am-btn-sm"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>	
+  <a class="am-btn am-btn-success am-btn-sm" href="tencent://message/?Menu=yes&uin=3328429240"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>	
     <hr>
 	
   <div class="am-text-warning"><h3>MCPE开发者[全职/兼职]</h3></div>
@@ -73,7 +73,7 @@
 	2:熟悉且经常玩MinecraftPE[移动版]<br>
 	3:JAVA经验<br>
 	4:拥有效率和热情<br>
-      <a class="am-btn am-btn-success am-btn-sm"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>	
+      <a class="am-btn am-btn-success am-btn-sm" href="tencent://message/?Menu=yes&uin=3328429240"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>	
 	
   <div class="am-text-warning"><h3>网站开发[兼职]</h3></div>
     1:拥有丰富的minecraft游戏经验并且热爱这款游戏<br>
@@ -81,7 +81,7 @@
 	3:有WEB开发经验,且熟悉ASP/PHP/JavaScript等<br>
 	4:可熟练配置和优化Mysql<br>
 	5:拥有效率和热情<br>
-      <a class="am-btn am-btn-success am-btn-sm"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>		
+      <a class="am-btn am-btn-success am-btn-sm" href="tencent://message/?Menu=yes&uin=3328429240"><i class="am-icon-qq am-icon-sm"></i> 联系QQ:3328429240 </a>		
 	
 	
   
@@ -111,7 +111,7 @@
       </div>
     </form>
     <hr>
-    <p>Copyright © 2020  - 春夏之梦     <a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank" title="MineMC">服主QQ<a/> <a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="Q群">官方Q群</a><p><a href="shengming.html" target="_blank" title="声明"><strong>免责声明</a> <a href="?i=1" target="_blank"><strong>春夏之梦服务器</a> <a href="https://pan.baidu.com/s/1d6Zq2-iO2vU2BCB2rQBV6g" target="_blank"><strong>春夏之梦客户端</strong></a></p><script type="text/javascript"></script>
+    <p>Copyright © 2020  - 春夏之梦     <a href="tencent://message/?Menu=yes&uin=3328429240" target="_blank" title="MineMC">服主QQ<a/> <a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="Q群">官方Q群</a><p><a href="shengming.html" target="_blank" title="声明"><strong>免责声明</a> <a href="?i=1" target="_blank"><strong>春夏之梦服务器</a> <a href="https://pan.baidu.com/s/1d6Zq2-iO2vU2BCB2rQBV6g" target="_blank"><strong>春夏之梦客户端</strong></a></p><script type="text/javascript"></script>
   </div>
 </div>
 </body>
