--- a/zp.html
+++ b/zp.html
@@ -104,7 +104,7 @@
       <div class="am-cf">
     
 
-      <a href="index.html" class="am-btn am-btn-default am-btn-sm am-fr"><i class="am-icon- am-icon-"></i> 再给我点时间想想？ </a>
+      <a href="index-lod.html" class="am-btn am-btn-default am-btn-sm am-fr"><i class="am-icon- am-icon-"></i> 再给我点时间想想？ </a>
 
 
       
