--- a/fwq.html
+++ b/fwq.html
@@ -63,7 +63,7 @@
 <!-- sidebar start -->
 <div class="admin-sidebar">
   <ul class="am-list admin-sidebar-list">
-        <li><a href="index.html"><span class="am-icon-home"></span> 首页</a></li>
+        <li><a href="index-lod.html"><span class="am-icon-home"></span> 首页</a></li>
         <li><a href="fwq.html"><span class="am-icon-users"></span> 服务器列表</a></li>
 		<li><a href="pack.html"><span class="am-icon-file"></span> 扩展材质包</a></li>
 
