--- a/photo2.html
+++ b/photo2.html
@@ -9,25 +9,25 @@
 </style>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1" />	
-	<title>磐石回中十八级六班合照</title>
+	<title>磐石回中十八级六班合照第二页</title>
 	<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
-	<link rel="shortcut icon" href="./images/favicon.jpg"/>
+	<link rel="shortcut icon" href="./images/favicon2.jpg"/>
 </head>
 <body class="loading-process">
 <div class="loading">
 	<div class="loading-circle"></div>
-	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
+	<div class="loading-avatar"><img src="images/avatar@2x2.jpg" alt="" width="100" height="100"></div>
 	<div class="loading-info">___奋力加载中___</div>
 </div>
 <div class="section-header">
 	<div class="section">
 		<nav class="nav" role="navigation">
 			<ul>
-				<li class="nav-about fade fade1"><a href="#about">合照</a></li>
-				<li class="nav-works fade fade4"><a href="#works">男生</a></li>
+				<li class="nav-about fade fade1"><a href="#about">全班合照</a></li>
+				<li class="nav-works fade fade4"><a href="#works">全班合照</a></li>
 				<li class="fade back-home"><a href="#top">首页</a></li>
-				<li class="nav-skill fade fade2"><a href="#skill">女生</a></li>
-				<li class="nav-contact fade fade3"><a href="#contact">自拍</a></li>
+				<li class="nav-skill fade fade2"><a href="#skill">上次合照</a></li>
+				<li class="nav-contact fade fade3"><a href="#contact">上次自拍</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -39,8 +39,8 @@
 <div class="section-wrap section-fristpage">
 	<div class="section">
 		<div class="section-content">
-			<p class="fade fade1"><a href="photo2.html">一学期,转瞬即逝</p>
-			<p class="fade fade2">你的样貌将会永远记在我们心中！</p>
+			<p class="fade fade1"><a href="photo.html">本页为接上页</p>
+			<p class="fade fade2">相遇便是缘</p>
 			<p class="fade fade3">滴水之恩,涌泉相报</p>
 			<p class="fade fade4">You di da di da me,I hua la hua la you.</p>
 		</div>
@@ -49,29 +49,29 @@
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="about-content clearfix section-content">
-	<img src="images/Group photo.jpg" alt="" width="980" height="580">
+	<img src="images/Group photo2.jpg" alt="" width="980" height="580">
 	    </div>
     </div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="works-content section-content">
-	<img src="images/Group photo-2.jpg" alt="" width="980" height="580">
+	<img src="images/Group photo2-2.jpg" alt="" width="980" height="580">
 	</div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="skill-content section-content">
-	<img src="images/Group photo-3.jpg" alt="" width="980" height="580">
+	<img src="images/Group photo.jpg" alt="" width="980" height="580">
 	    </div>
     </div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="skill-content section-content">
-	<img src="images/Selfie-1.jpg" alt="" width="315" height="550">
-	<img src="images/Selfie-2.jpg" alt="" width="315" height="550">
-	<img src="images/Selfie-3.jpg" alt="" width="315" height="550">
+	<img src="images/远程图库 (2).jpg" alt="" width="315" height="550">
+	<img src="images/远程图库 (16).jpg" alt="" width="315" height="550">
+	<img src="images/远程图库 (20).jpg" alt="" width="315" height="550">
 	    </div>
 	</div>
 </div>
