--- a/index-lod.html
+++ b/index-lod.html
@@ -342,7 +342,7 @@ var _hmt = _hmt || [];
         <button class="am-btn am-btn-secondary am-topbar-btn am-btn-sm am-text-suc">
           
 
-<a href="春夏之梦专用客户端 V1.4.8.zip"><span class="mark"></span>下载加入</a>
+<a href="春夏之梦专用客户端.zip"><span class="mark"></span>下载加入</a>
          
 
         </button>
@@ -368,7 +368,7 @@ var _hmt = _hmt || [];
         <div class="separator"></div>
         <p class="text">期待您的参与，共同打造和谐的游戏环境.</p>
          <p>
-        <a href="春夏之梦专用客户端 V1.4.8.zip" class="am-btn am-btn-sm get-btn">下载加入</a>
+        <a href="春夏之梦专用客户端.zip" class="am-btn am-btn-sm get-btn">下载加入</a>
       </p>
       </div>
     </div>
@@ -494,7 +494,7 @@ var _hmt = _hmt || [];
 
 
   
-    <p>Copyright © 2020  - 春夏之梦     <a href="tencent://message/?Menu=yes&uin=3328429240" target="_blank" title="MineMC">服主QQ<a/> <a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="Q群">官方Q群</a><p><a href="shengming.html" target="_blank" title="声明"><strong>免责声明</a> <a href="?i=1" target="_blank"><strong>春夏之梦服务器</a> <a href="春夏之梦专用客户端 V1.4.8.zip" target="_blank"><strong>春夏之梦客户端</strong></a></p><script type="text/javascript"></script>
+    <p>Copyright © 2020  - 春夏之梦     <a href="tencent://message/?Menu=yes&uin=3328429240" target="_blank" title="MineMC">服主QQ<a/> <a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="Q群">官方Q群</a><p><a href="shengming.html" target="_blank" title="声明"><strong>免责声明</a> <a href="?i=1" target="_blank"><strong>春夏之梦服务器</a> <a href="春夏之梦专用客户端.zip" target="_blank"><strong>春夏之梦客户端</strong></a></p><script type="text/javascript"></script>
 	</strong></a><script type="text/javascript"></script>
 
   </footer>
