--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ a{cursor:url('http://dlam1.3vfree.net/db/cur/yes-blue/2.cur'), auto;}
 			<h5><a target="_blank_" href="index-lod.html">赞助请点击转到完整版官网页面<h5>
 			<hr>
 			<h2><a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703">·>>加入QQ官方群<<·</a></h2>
-			<h2><a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">·>>完整版客户端<<·</a></h2>
-			<h2><a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">·>>精简版客户端<<·</a></h2>
+			<h2><a href="http://pay.mcd7.top">·>>充值网站<<·</a></h2>
+			<h2><a href="khd.zip">·>>客户端下载<<·</a></h2>
 		</div>
 		
 	</div>
@@ -89,8 +89,8 @@ a{cursor:url('http://dlam1.3vfree.net/db/cur/yes-blue/2.cur'), auto;}
                                                         <p>不要在群内刷屏、不良信息、广告、装B等</p>
                                                         <p>服务器等方面服主加班制作！给大家打造一个完美的服务器</p>
                                                         <p>如果觉得服务器好玩，欢迎大家把你的游戏好友一起叫来大家一起玩、如果你有推广渠道欢迎大家来推广切记！！不要在别人的服务器推广,否则会招来一些不必要的争执！</p>
-                                                        <h2><a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">·>>完整版客户端<<·</a></h2>
-			                                            <h2><a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">·>>精简版客户端<<·</a></h2>
+                                                        <h2><a href="khd.zip">·>>完整版客户端<<·</a></h2>
+			                                            <h2><a href="khd.zip">·>>精简版客户端<<·</a></h2>
 
 						</td>
 					</tr>
