--- a/fwq.html
+++ b/fwq.html
@@ -144,7 +144,7 @@
 		  		              <tr>
               <td><input type="checkbox"></td>
               <td>1.8.x<span class="am-badge am-badge-warning">推荐</span></td>
-              <td><a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">春夏之梦</a></td>
+              <td><a href="khd.zip">春夏之梦</a></td>
               <td>小游戏</td>
               <td>2018-1-3</td>
               <td><a href="//shang.qq.com/wpa/qunwpa?idkey=c9214aa5087ce525d3860cc49a8d5c1338ed0d3e49dd0ecb8cbdb68400680c68">官方QQ群</a></td>
@@ -152,7 +152,7 @@
                <div class="am-btn-toolbar">
                   <div class="am-btn-group am-btn-group-xs">
                   
-                      <a class="am-btn am-btn-success am-btn-sm " href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip"><span class="am-icon-star"></span>下载客户端</a>
+                      <a class="am-btn am-btn-success am-btn-sm " href="khd.zip"><span class="am-icon-star"></span>下载客户端</a>
                   </div>
                 </div>
               </td>
@@ -204,7 +204,7 @@
             <tr>
               <td><input type="checkbox"></td>
               <td>1.12.2<span class="am-badge am-badge-warning">推荐</span></td>
-              <td><a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">第七空间</a></td>
+              <td><a href="khd.zip">第七空间</a></td>
               <td>RPG</td>
               <td>2018-3-11</td>
               <td><a href="//shang.qq.com/wpa/qunwpa?idkey=c9214aa5087ce525d3860cc49a8d5c1338ed0d3e49dd0ecb8cbdb68400680c68">官方QQ群</a></td>
@@ -212,7 +212,7 @@
                <div class="am-btn-toolbar">
                   <div class="am-btn-group am-btn-group-xs">
                   
-                      <a class="am-btn am-btn-success am-btn-sm " href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip"><span class="am-icon-star"></span>下载客户端</a>
+                      <a class="am-btn am-btn-success am-btn-sm " href="khd.zip"><span class="am-icon-star"></span>下载客户端</a>
                   </div>
                 </div>
               </td>
