--- a/wz/wz4.html
+++ b/wz/wz4.html
@@ -158,7 +158,7 @@
 </div>
 
 <footer class="blog-footer">
-    <p>Copyright © 2020  - 春夏之梦     <a href="tencent://message/?Menu=yes&uin=3328429240" target="_blank" title="MineMC">服主QQ<a/> <a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="Q群">官方Q群</a><p><a href="shengming.html" target="_blank" title="声明"><strong>免责声明</a> <a href="?i=1" target="_blank"><strong>春夏之梦服务器</a> <a href="http://ys-g.ys168.com/616071642/p44463I8653OK5hjsIxj/%E6%98%A5%E5%A4%8F%E4%B9%8B%E6%A2%A6%E4%B8%93%E7%94%A8%E5%AE%A2%E6%88%B7%E7%AB%AF.zip" target="_blank"><strong>春夏之梦客户端</strong></a></p><script type="text/javascript"></script>
+    <p>Copyright © 2020  - 春夏之梦     <a href="tencent://message/?Menu=yes&uin=3328429240" target="_blank" title="MineMC">服主QQ<a/> <a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="Q群">官方Q群</a><p><a href="shengming.html" target="_blank" title="声明"><strong>免责声明</a> <a href="?i=1" target="_blank"><strong>春夏之梦服务器</a> <a href="khd.zip" target="_blank"><strong>春夏之梦客户端</strong></a></p><script type="text/javascript"></script>
 <footer>
 
 <!--[if lt IE 9]>
