--- a/photo2.html
+++ b/photo2.html
@@ -11,12 +11,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1" />	
 	<title>磐石回中十八级六班合照第二页</title>
 	<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
-	<link rel="shortcut icon" href="./images/favicon2.jpg"/>
+	<link rel="shortcut icon" href="./images/favicon.jpg"/>
 </head>
 <body class="loading-process">
 <div class="loading">
 	<div class="loading-circle"></div>
-	<div class="loading-avatar"><img src="images/avatar@2x2.jpg" alt="" width="100" height="100"></div>
+	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
 	<div class="loading-info">___奋力加载中___</div>
 </div>
 <div class="section-header">
@@ -69,9 +69,9 @@
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="skill-content section-content">
-	<img src="images/远程图库 (2).jpg" alt="" width="315" height="550">
-	<img src="images/远程图库 (16).jpg" alt="" width="315" height="550">
-	<img src="images/远程图库 (20).jpg" alt="" width="315" height="550">
+	<img src="images/Selfie-4.jpg" alt="" width="315" height="550">
+	<img src="images/Selfie-5.jpg" alt="" width="315" height="550">
+	<img src="images/Selfie-6.jpg" alt="" width="315" height="550">
 	    </div>
 	</div>
 </div>
