--- a/disclaimer.html
+++ b/disclaimer.html
@@ -160,7 +160,7 @@
 
 
 
-<p class="has-text-align-left">16.IEcraft 为本服务器暂定名，不做任何有限及无限责任承担。无任何公司性质。且严禁其他Minecraft服务器抄袭。 </p>
+<p class="has-text-align-left">16.春夏之梦 为本服务器暂定名，不做任何有限及无限责任承担。无任何公司性质。且严禁其他Minecraft服务器抄袭。 </p>
 
 
 
