--- a/disclaimer.html
+++ b/disclaimer.html
@@ -42,11 +42,11 @@
     <div class="container">
 
            <div class="logo float-left">
-<h1 class="text-light"><a href="index.html"><span>Spring Summer of Dream-春夏之梦</span></a></h1>
+<h1 class="text-light"><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/index.html"><span>Spring Summer of Dream-春夏之梦</span></a></h1>
       </div> 
      <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li><a href="index.html">主页<i class="la la-angle-down"></i></a></li>
+          <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/index.html">主页<i class="la la-angle-down"></i></a></li>
           <li><a href="http://pay.mcd7.top" target="_blank" title="点击打开官方赞助页面">赞助页面</a></li>
           <li><a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="点击加入官方QQ群">官方群聊</a></li>
 		  <li><a href="disclaimer.html">免责声明</a></li>
@@ -78,7 +78,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>免责声明</h2>
           <ol>
-            <li><a href="index.html">主页</a></li>
+            <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/index.html">主页</a></li>
             <li>免责声明</li>
           </ol>
         </div>
