--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <div class="container">
 
             <div class="logo float-left">
-<h1 class="text-light"><a href="index.html"><span>Spring Summer of Dream-春夏之梦</span></a></h1>
+<h1 class="text-light"><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/index.html"><span>Spring Summer of Dream-春夏之梦</span></a></h1>
       </div> 
      <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li><a href="index.html">主页<i class="la la-angle-down"></i></a></li>
+          <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/index.html">主页<i class="la la-angle-down"></i></a></li>
           <li><a href="http://pay.mcd7.top" target="_blank" title="点击打开官方赞助页面">赞助页面</a></li>
           <li><a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="点击加入官方QQ群">官方群聊</a></li>
 		  <li><a href="disclaimer.html">免责声明</a></li>
@@ -53,9 +53,9 @@
               <!-- <li><a href="#">1.15.2版本</a></li> -->
               <li class="drop-down"><a href="#">专用版本</a>
                 <ul>
-                  <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip">下载通道 1</a></li>
-                  <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip">下载通道 2</a></li>
-                  <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip">下载通道 3</a></li>
+                  <li><a href="khd.zip">下载通道 1</a></li>
+                  <li><a href="khd.zip">下载通道 2</a></li>
+                  <li><a href="khd.zip">下载通道 3</a></li>
                 </ul>
               </li>
               <!-- <li><a href="#">下载通道 3</a></li> -->
@@ -80,7 +80,7 @@
           <p class="animated fadeInUp">在信息爆炸的年代，我们不愿成为知识的过客，接受各种玩家意见，发挥社区的力量，参与到Minecraft论坛获得自我提升。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -91,7 +91,7 @@
           <p class="animated fadeInUp">春夏之梦 鼓励玩家之间进行交流协作，腐竹只会解决问题 本着公平理念，绝不会偏袒任何一个玩家。在游戏过程中也不会干预玩家的游戏乐趣。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -102,7 +102,7 @@
           <p class="animated fadeInUp">春夏之梦开设优质服务器，无论是您喜爱纯净生存或是小游戏，在战争中左右杀敌或是在山谷中隐居。您都可以在春夏之梦服务器中找到属于自己的乐趣。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -113,7 +113,7 @@
           <p class="animated fadeInUp">相比国外的游戏服务器，春夏之梦专注解决中国玩家的问题，针对中国网络进行优化，实现最佳中国玩家游戏效果，为你节省大量游戏时间。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -124,7 +124,7 @@
           <p class="animated fadeInUp">春夏之梦 非常注重游戏体验，基于独立高端游戏服务器开发，并使用最先进的技术，使Minecraft联机成为一种享受，让玩家可以高速载入。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -188,7 +188,7 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="wp-content\img\why-us.jpg" class="img-fluid" alt="">
+            <img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/wp-content\img\why-us.jpg" class="img-fluid" alt="">
             <a href="#" class="venobox play-btn mb-4" data-vbtype="iframe" data-href="http://player.bilibili.com/player.html?bvid=BV1xs411U712"></a>
           </div>
 
@@ -223,7 +223,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="wp-content\img\features-1.jpg" class="img-fluid" alt="">
+            <img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/wp-content\img\features-1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
             <h3>你是否因作弊问题厌倦了游玩生存服或者RPG服务器？</h3>
@@ -241,7 +241,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="wp-content\img\features-2.jpg" class="img-fluid" alt="">
+            <img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/wp-content\img\features-2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>你是否已经厌倦了传统模式下只会机械干一件事的RPG？</h3>
@@ -256,7 +256,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="wp-content\img\features-3.jpg" class="img-fluid" alt="">
+            <img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/wp-content\img\features-3.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5">
             <h3>你是否感觉到其他服务器中不氪金将会一无所有？</h3>
@@ -271,7 +271,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="wp-content\img\features-4.jpg" class="img-fluid" alt="">
+            <img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/wp-content\img\features-4.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>你是否在其他服务器中被限制移动产生愤怒？</h3>
