--- a/photo2.html
+++ b/photo2.html
@@ -16,7 +16,7 @@
 <body class="loading-process">
 <div class="loading">
 	<div class="loading-circle"></div>
-	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
+	<div class="loading-avatar"><img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/avatar@2x.jpg" alt="" width="100" height="100"></div>
 	<div class="loading-info">___奋力加载中___</div>
 </div>
 <div class="section-header">
@@ -34,7 +34,7 @@
 	<div class="nav-bg"></div>
 </div>
 <div class="home-bg">
-	<img src="images/home.jpg" alt="" width="800" height="667">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/home.jpg" alt="" width="800" height="667">
 </div>
 <div class="section-wrap section-fristpage">
 	<div class="section">
@@ -49,29 +49,29 @@
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="about-content clearfix section-content">
-	<img src="images/Group photo2.jpg" alt="" width="980" height="580">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/Group photo2.jpg" alt="" width="980" height="580">
 	    </div>
     </div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="works-content section-content">
-	<img src="images/Group photo2-2.jpg" alt="" width="980" height="580">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/Group photo2-2.jpg" alt="" width="980" height="580">
 	</div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="skill-content section-content">
-	<img src="images/Group photo.jpg" alt="" width="980" height="580">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/Group photo.jpg" alt="" width="980" height="580">
 	    </div>
     </div>
 </div>
 <div id="skill" class="section-wrap section-skill">
 	<div class="section">
 		<div class="skill-content section-content">
-	<img src="images/Selfie-4.jpg" alt="" width="315" height="550">
-	<img src="images/Selfie-5.jpg" alt="" width="315" height="550">
-	<img src="images/Selfie-6.jpg" alt="" width="315" height="550">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/Selfie-4.jpg" alt="" width="315" height="550">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/Selfie-5.jpg" alt="" width="315" height="550">
+	<img src="https://cdn.jsdelivr.net/gh/3328429240/dream@master/images/Selfie-6.jpg" alt="" width="315" height="550">
 	    </div>
 	</div>
 </div>
