--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p class="animated fadeInUp">在信息爆炸的年代，我们不愿成为知识的过客，接受各种玩家意见，发挥社区的力量，参与到Minecraft论坛获得自我提升。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -94,7 +94,7 @@
           <p class="animated fadeInUp">春夏之梦 鼓励玩家之间进行交流协作，腐竹只会解决问题 本着公平理念，绝不会偏袒任何一个玩家。在游戏过程中也不会干预玩家的游戏乐趣。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -105,7 +105,7 @@
           <p class="animated fadeInUp">春夏之梦开设优质服务器，无论是您喜爱纯净生存或是小游戏，在战争中左右杀敌或是在山谷中隐居。您都可以在春夏之梦服务器中找到属于自己的乐趣。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -116,7 +116,7 @@
           <p class="animated fadeInUp">相比国外的游戏服务器，春夏之梦专注解决中国玩家的问题，针对中国网络进行优化，实现最佳中国玩家游戏效果，为你节省大量游戏时间。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
@@ -127,7 +127,7 @@
           <p class="animated fadeInUp">春夏之梦 非常注重游戏体验，基于独立高端游戏服务器开发，并使用最先进的技术，使Minecraft联机成为一种享受，让玩家可以高速载入。</p>
           <p class="animated fadeInUp">电脑版地址: mcd7.top</p>
           <p class="animated fadeInUp">移动版地址pe.mcd7.top</p>
-          <a href="khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
+          <a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip" class="btn-get-started animated fadeInUp">点击下载进入</a>
         </div>
       </div>
 
