--- a/disclaimer.html
+++ b/disclaimer.html
@@ -59,7 +59,7 @@
                 </ul>
               <li class="drop-down"><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">材质包</a>
                 <ul>
-                  <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip">第七空间</a></li>
+                  <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/resourcepacks\space7.zip">第七空间</a></li>
                   <li><a href="https://api.hanximeng.com/lanzou/?url=https://wwe.lanzous.com/imLVKor7owj&type=down">剑虚斗罗</a></li>
                 </ul>
               </li>
