--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
      <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
           <li><a href="index.html">主页<i class="la la-angle-down"></i></a></li>
-          <li><a href="http://pay.mcd7.top" target="_blank" title="点击打开官方赞助页面">赞助页面</a></li>
-          <li><a href="buhuibaidu.me">帮你百度<i class="la la-angle-down"></i></a></li>
+          <li><a href="http://pay.mcd7.top" target="_blank" title="点击打开官方赞助页面">赞助</a></li>
+          <li><a href="https://buhuibaidu.me">帮你百度<i class="la la-angle-down"></i></a></li>
           <li><a href="http://shang.qq.com/wpa/qunwpa?idkey=24d9d79667c9d52f66315e7c43cbabb5dc9b5e03af088c7a4d837b62d3a17703" target="_blank" title="点击加入官方QQ群">官方群聊</a></li>
 		  <li><a href="disclaimer.html">免责声明</a></li>
           <li class="drop-down"><a href="">客户端下载</a>
