--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
 		  <li><a href="disclaimer.html">免责声明</a></li>
           <li class="drop-down"><a href="">客户端下载</a>
             <ul>
-              <!-- <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">1.15.2版本</a></li> -->
-              <li class="drop-down"><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">客户端</a>
+              <!-- <li><a href="">1.15.2版本</a></li> -->
+              <li class="drop-down"><a href="">客户端</a>
                 <ul>
-                  <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/khd.zip">春夏之梦专用客户端 V1.6 Beta</a></li>
+                  <li><a href="http://tool.bitefu.net/lanzou/?url=https://wwe.lanzoui.com/ifmTgpra3bg&type=down&pwd=aiwy">春夏之梦专用客户端 V1.6 Beta</a></li>
                 </ul>
-              <li class="drop-down"><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">材质包</a>
+              <li class="drop-down"><a href="">材质包</a>
                 <ul>
                   <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/resourcepacks\space7.zip">第七空间</a></li>
-                  <li><a href="https://api.hanximeng.com/lanzou/?url=https://wwe.lanzous.com/imLVKor7owj&type=down">剑虚斗罗</a></li>
+                  <li><a href="http://tool.bitefu.net/lanzou/?url=https://www.lanzoui.com/igI1ipraibg&type=down&pwd=aiwy">剑虚斗罗</a></li>
                 </ul>
               </li>
-              <!-- <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">下载通道 3</a></li> -->
-              <!-- <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">下载通道 4</a></li> -->
-              <!-- <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/#">下载通道 5</a></li> -->
+              <!-- <li><a href="">下载通道 3</a></li> -->
+              <!-- <li><a href="">下载通道 4</a></li> -->
+              <!-- <li><a href="">下载通道 5</a></li> -->
             </ul>
           </li>
           <!-- <li><a href="https://cdn.jsdelivr.net/gh/3328429240/dream@master/login.html">登录/注册</a></li> -->
